--- a/main.ipynb
+++ b/main.ipynb
@@ -48,52 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                             headline  vader_score  \\\n",
-      "0   \\n\\n                                TON and XR...       0.0000   \n",
-      "1   \\n\\n                                Top analys...       0.4588   \n",
-      "2   \\n\\n                                AI predict...       0.5719   \n",
-      "3   \\n\\n                                Why stakin...       0.7351   \n",
-      "4   \\n\\n                                XRP and AD...       0.8176   \n",
-      "5   \\n\\n                                Massive wi...       0.3400   \n",
-      "6   \\n\\n                                This new l...       0.0000   \n",
-      "7   \\n\\n                                XRP price ...       0.4767   \n",
-      "8   \\n\\n                                Paradigm s...       0.0000   \n",
-      "9   \\n\\n                                Kaspa ETF ...       0.0000   \n",
-      "10  \\n\\n                                XRP ETF in...       0.5994   \n",
-      "11  \\n\\n                                MEXC lists...       0.0000   \n",
-      "12  \\n\\n                                XRP to rea...       0.0258   \n",
-      "13  \\n\\n                                This new v...       0.0000   \n",
-      "14  \\n\\n                                Why XRP tr...       0.6597   \n",
-      "15  \\n\\n                                Will XRP p...       0.4019   \n",
-      "16  \\n\\n                                Altcoins s...       0.3400   \n",
-      "17  \\n\\n                                Bullish si...       0.0000   \n",
+      "VADER Sentinment Analysis:\n",
+      "0.0\n",
       "\n",
-      "    textblob_score  \n",
-      "0         0.000000  \n",
-      "1         0.250000  \n",
-      "2         0.218182  \n",
-      "3         0.000000  \n",
-      "4         0.068182  \n",
-      "5         0.133333  \n",
-      "6         0.136364  \n",
-      "7         0.200000  \n",
-      "8         0.000000  \n",
-      "9        -0.100000  \n",
-      "10        0.000000  \n",
-      "11        0.000000  \n",
-      "12        0.000000  \n",
-      "13        0.136364  \n",
-      "14        0.000000  \n",
-      "15       -0.100000  \n",
-      "16        0.000000  \n",
-      "17        0.000000  \n"
+      "TextBlob Sentinment Analysis:\n",
+      "Polarity : 0.0, Subjectivity 0.0\n"
      ]
     }
    ],
@@ -117,6 +83,146 @@
     "\n",
     "print(\"VADER Sentinment Analysis:\")\n",
     "print(vader_score)\n",
+    "\n",
+    "print(\"\\nTextBlob Sentinment Analysis:\")\n",
+    "print(f\"Polarity : {TextBlob(headline).sentiment.polarity}, Subjectivity {TextBlob(headline).sentiment.polarity}\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VADER Sentinment Analysis:\n",
+      "0.0\n",
+      "\n",
+      "TextBlob Sentinment Analysis:\n",
+      "Polarity : 0.0, Subjectivity 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = []\n",
+    "for headline in headlines:\n",
+    "    # VADER sentiment analysis\n",
+    "    vader_score = sia.polarity_scores(headline)[\"compound\"]\n",
+    "\n",
+    "    # TextBlob sentiment analysis\n",
+    "    textblob_score = TextBlob(headline).sentiment.polarity\n",
+    "\n",
+    "    data.append(\n",
+    "        {\n",
+    "            \"headline\": headline,\n",
+    "            \"vader_score\": vader_score,\n",
+    "            \"textblob_score\": textblob_score,\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "print(\"VADER Sentinment Analysis:\")\n",
+    "print(vader_score)\n",
+    "\n",
+    "print(\"\\nTextBlob Sentinment Analysis:\")\n",
+    "print(f\"Polarity : {TextBlob(headline).sentiment.polarity}, Subjectivity {TextBlob(headline).sentiment.polarity}\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VADER Sentinment Analysis:\n",
+      "0.0\n",
+      "\n",
+      "TextBlob Sentinment Analysis:\n",
+      "Polarity : 0.0, Subjectivity 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = []\n",
+    "for headline in headlines:\n",
+    "    # VADER sentiment analysis\n",
+    "    vader_score = sia.polarity_scores(headline)[\"compound\"]\n",
+    "\n",
+    "    # TextBlob sentiment analysis\n",
+    "    textblob_score = TextBlob(headline).sentiment.polarity\n",
+    "\n",
+    "    data.append(\n",
+    "        {\n",
+    "            \"headline\": headline,\n",
+    "            \"vader_score\": vader_score,\n",
+    "            \"textblob_score\": textblob_score,\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "print(\"VADER Sentinment Analysis:\")\n",
+    "print(vader_score)\n",
+    "\n",
+    "print(\"\\nTextBlob Sentinment Analysis:\")\n",
+    "print(f\"Polarity : {TextBlob(headline).sentiment.polarity}, Subjectivity {TextBlob(headline).sentiment.polarity}\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VADER Sentinment Analysis:\n",
+      "0.0\n",
+      "\n",
+      "TextBlob Sentinment Analysis:\n",
+      "Polarity : 0.0, Subjectivity 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = []\n",
+    "for headline in headlines:\n",
+    "    # VADER sentiment analysis\n",
+    "    vader_score = sia.polarity_scores(headline)[\"compound\"]\n",
+    "\n",
+    "    # TextBlob sentiment analysis\n",
+    "    textblob_score = TextBlob(headline).sentiment.polarity\n",
+    "\n",
+    "    data.append(\n",
+    "        {\n",
+    "            \"headline\": headline,\n",
+    "            \"vader_score\": vader_score,\n",
+    "            \"textblob_score\": textblob_score,\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "print(\"VADER Sentinment Analysis:\")\n",
+    "print(vader_score)\n",
+    "\n",
+    "print(\"\\nTextBlob Sentinment Analysis:\")\n",
+    "print(f\"Polarity : {TextBlob(headline).sentiment.polarity}, Subjectivity {TextBlob(headline).sentiment.polarity}\")\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
